# ninja-coding-harness

./: .gitignore  Cargo.toml  README.md  debug-hang.py  debug-swe-forge-check.py  manual_telegram_report.py  monitor-hang.sh  swe_cache.db  swe_cache.db-shm  swe_cache.db-wal  test_challenge_loading.rs
generated-challenges/: fibonacci-sample.json  test_fibonacci.py
ninja_rollouts/: rollout_1773139691_challenge_1773139691.json  rollout_1773141286_challenge_1773141286.json  rollout_1773141407_challenge_1773141407.json  rollout_1773141526_challenge_1773141526.json  rollout_1773141646_challenge_1773141646.json  rollout_1773141766_challenge_1773141766.json  rollout_1773141886_challenge_1773141886.json  rollout_1773142006_challenge_1773142006.json  rollout_1773142125_challenge_1773142125.json  rollout_1773142254_challenge_1773142254.json  rollout_1773142374_challenge_1773142374.json  rollout_1773142494_challenge_1773142494.json  rollout_1773142614_challenge_1773142614.json  rollout_1773142734_challenge_1773142734.json  rollout_1773142855_challenge_1773142855.json  rollout_1773142979_challenge_1773142979.json  rollout_1773143099_challenge_1773143099.json  rollout_1773143219_challenge_1773143219.json  rollout_1773143338_challenge_1773143338.json  rollout_1773143459_challenge_1773143459.json  rollout_1773143578_challenge_1773143578.json  rollout_1773143698_challenge_1773143698.json  rollout_1773143818_challenge_1773143818.json  rollout_1773143939_challenge_1773143939.json  rollout_1773144059_challenge_1773144059.json  rollout_1773144178_challenge_1773144178.json  (+11 more)
src/: config.rs  (+10 more)
(+4 files in other folders)
