[package]
name = "ninja"
version = "0.1.0"
edition = "2021"
authors = ["Arbos <arbos@example.com>"]
description = "A self-improving coding harness for solving programming challenges"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tempfile = "3.0"
bollard = "0.15"
thiserror = "1.0"
futures = "0.3"
